Update API spec, Add OpenAPI code generation scripts, configuration files and generated boilerplate code
